--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,7 @@ Naslednja opravila so razvrscena po prioriteti (zgoraj bolj nujna):
 
 - avtomaticen replace datoteke, ko se nalozi na server (za ucitelje)
 
-- ucitelj lahko pogleda resitev naloge tudi, ce je se ni resil
+- ucitelj naj lahko pogleda resitev naloge tudi, ce je se ni resil
 
 - ali se ze preverja, ali part-id pase skupaj z id-jem od naloge, ali
   se se vedno kar shrani?
@@ -12,6 +12,12 @@ Naslednja opravila so razvrscena po prioriteti (zgoraj bolj nujna):
 - tip, ki prikazuje resitev studenta, ko se zapeljemo na + ali - izgine
   po nekaj sekundah. Potrebovali bi ta pravi pop-up.
 
+- ali bi bilo bolje, če bi Check.equal lovil izjeme in sam izpisal
+  "moralo bi se vrniti to-in-to, vendar se sprozi ta-in-ta-izjema"?
+  Zdaj dobimo precej skrivnosten backtrace, npr. ce pride do deljenja
+  z 0.
+
 - narediti grupo "ucitelj", da bomo lahko locili administratorje od uciteljev
 
 - koristno bi bilo, ce bi lahko ucitelj komentiral resitve studentov
+
