Paranoicen upload, ki ne naredi nicesar, ce je prislo do ene same napake. Poleg tega brise manjkajoce podnaloge iz baze, ter ne dovoli podvojenih id-jev. Template za urejanje naloge izboljsan, popravljeni regexpi, dodan template za novo podnalogo.

--- a/TODO.txt
+++ b/TODO.txt
@@ -12,6 +12,8 @@ TODO za Tomo v splošnem:
 
 - counterji, da se ne dovoli uploadanje starih datotek pri uciteljih
 
+- ali bi lahko bili kompatibilni s Python 2.x brez večjega truda?
+
 - avtomaticen replace za R
 
 - avotmaticen replace za studente
