--- a/TODO.txt
+++ b/TODO.txt
@@ -5,8 +5,10 @@ TODO za Tomo v splošnem:
 
 - združiti aplikaciji course in problem v aplikacijo tomo
 
-- naredi večje + in - pri statistikah, da se jih lažje zadane,
-  okno za prikaz rešitve naj bo enako kot pri "poglej rešitev",
+- statistika narobe pobere attempte iz baze, oziroma template dela narobe,
+  ker manjkajo deli tabele, za katere ni bilo nobenega attempta.
+
+- v statistiki naj bo okno za prikaz rešitve enako kot pri "poglej rešitev",
   ta hover je annoying.
 
 - Check.exec, da lahko preverimo tudi rešitve, ki manipulirajo state
