--- a/tomo/INSTALL.txt
+++ b/tomo/INSTALL.txt
@@ -7,21 +7,31 @@ Installation:
 
 1. Install dependencies.
 
-2. Download Tomo, suppose it is in /some/place/tomo/
+2. Download Tomo application and put it on your Python path.
 
-3. Copy settings_dist.py to settings.py and edit the relevant info, in particular:
+3. Add 'tomo' to your project's settings.INSTALLED_APPS.
+   Since 'tomo' currently uses the Django admin application in some places,
+   be sure to add 'django.contrib.admin' to settings.INSTALLED_APPS, if it is
+   not there already.
 
-   STATICFILES_DIRS = ('/some/place/tomo/static/',)
-   SECRET_KEY = 'This string contains forty-two characters.'
-   TEMPLATE_DIRS = ('/some/place/tomo/templates/',)
+4. Add 'django.core.context_processors.request' to your project's
+   settings.TEMPLATE_CONTEXT_PROCESSORS. If your settings do not contain
+   TEMPLATE_CONTEXT_PROCESSORS, use the following:
 
-   If you use a sqlite3 database for a development version, call it 'tomo.db' if
-   you want hg to ignore it automatically.
-
-4. If all is well, /some/place/tomo/manage.py should run ok at this point.
+    TEMPLATE_CONTEXT_PROCESSORS = (
+        # These are the default context processors provided by Django 1.3
+        'django.contrib.auth.context_processors.auth',
+        'django.core.context_processors.static',
+        'django.core.context_processors.debug',
+        'django.core.context_processors.i18n',
+        'django.core.context_processors.media',
+        'django.contrib.messages.context_processors.messages',
+        # This is the context processor we want to include
+        'django.core.context_processors.request',
+    )
 
 5. Run the following commands:
 
-    cd  /some/place/tomo/static/
-   ./manage.py syncdb
-   ./manage.py runserver
+    cd /path/to/your/project/
+    ./manage.py syncdb
+    ./manage.py runserver
