--- a/tomo/TODO.txt
+++ b/tomo/TODO.txt
@@ -20,6 +20,22 @@ Naslednja opravila so razvrscena po prioriteti (zgoraj bolj nujna):
 
 - kopiranje problem-setov med predmeti in kopiranje nalog med problem-seti
 
+- avtomatičen replace za študente:
+
+    primer:
+
+    def backup_name(filename):
+        name, extension = os.path.splitext(filename)
+        index = 1
+        while os.path.exists('{0}-{1}{2}'.format(name, index, extension)):
+            index += 1
+        return '{0}-{1}{2}'.format(name, index, extension)
+
+    filename = os.path.abspath(sys.argv[0])
+    shutil.copy2(filename, backup_name(filename))
+    with open(filename, "wb") as f:
+        f.write(new_contents)
+
 - avtomaticen replace za R
 
 - (A) izboljsaj sporocila za studente
