--- a/tomo/TODO.txt
+++ b/tomo/TODO.txt
@@ -11,6 +11,13 @@ Naslednja opravila so razvrscena po prioriteti (zgoraj bolj nujna):
 
 - (M) naročnje na predmete pri študentih in učiteljih, pod spiskom predmetov
 
+- Kaj lahko Check.canonize naredi v zvezi s tem:
+
+   >>> -(0/2)
+   -0.0
+   >>> -0/2
+   0.0
+
 - koristno bi bilo, ce bi lahko ucitelj komentiral resitve studentov,
   in obratno, da lahko student kontaktira (koga, avtorja?)
 
