Check.r brand new and is a subset of check.py. Minor FMF project renaming.
--HG--
rename : templates/r/json.r => templates/r/rjson.r

--- a/tomo/TODO.txt
+++ b/tomo/TODO.txt
@@ -1,6 +1,6 @@
 Naslednja opravila so razvrscena po prioriteti (zgoraj bolj nujna):
 
-- (M) Popravi urls.py in tomo/urls.py, kateri je ta pravi? Kaj je treba includati iz settings.py?
+- (M) JSON template za R
 
 - Ctrl-M-ji se pojavijo vsakič, ko editiram nalogo preko djangoadmin (MacOS, Chrome).
 
