--- a/tomo/TODO.txt
+++ b/tomo/TODO.txt
@@ -6,6 +6,7 @@
 - premikanje nalog v sklopu
 - premikanje sklopov v predmetu
 
+- poenostaviti izpis študentskih datotek
 - narediti Check.compare in Check.run odporna na izjeme.
 
 - na stran s statistiko dodaj stolpec s časom oddaje
