--- a/tomo/TODO.txt
+++ b/tomo/TODO.txt
@@ -10,7 +10,9 @@
 - narediti Check.compare in Check.run odporna na izjeme.
 
 - na stran s statistiko dodaj stolpec s časom oddaje
+- na statistiki naredi urejanje po stolpcih
 
+- prenovi kazanje rešitev
 - kontaktiranje študentov glede rešitev
 - kontaktiranje avtorjev glede nalog
 
