--- a/tomo/TODO.txt
+++ b/tomo/TODO.txt
@@ -3,10 +3,7 @@
 - podpora za Mathematico
 
 - kopiranje problem-setov med predmeti in kopiranje nalog med problem-seti
-- premikanje nalog v sklopu
-- premikanje sklopov v predmetu
 
-- poenostaviti izpis študentskih datotek
 - narediti Check.compare in Check.run odporna na izjeme.
 
 - na stran s statistiko dodaj stolpec s časom oddaje
@@ -15,6 +12,8 @@
 - prenovi kazanje rešitev
 - kontaktiranje študentov glede rešitev
 - kontaktiranje avtorjev glede nalog
+
+- popucati akcije
 
 PREDEN TOMO DAMO NA VOLJO DRUGIM UČITELJEM
 
