--- a/web/locale/sl/LC_MESSAGES/django.po
+++ b/web/locale/sl/LC_MESSAGES/django.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-07 13:59+0200\n"
-"PO-Revision-Date: 2015-08-07 14:04+0100\n"
+"POT-Creation-Date: 2015-08-12 10:30+0200\n"
+"PO-Revision-Date: 2015-08-12 10:31+0100\n"
 "Last-Translator: Sonja Jerše <sonja.jerse@gmail.com>\n"
 "Language-Team: American English <kde-i18n-doc@kde.org>\n"
 "Language: en_US\n"
@@ -18,27 +18,27 @@ msgstr ""
 "%100==4 ? 2 : 3);\n"
 "X-Generator: Poedit 1.7.5\n"
 
-#: courses/models.py:42
+#: courses/models.py:57
 msgid "Hidden"
 msgstr "Skrite"
 
-#: courses/models.py:43
+#: courses/models.py:58
 msgid "Visible when solved"
 msgstr "Vidne po sprejeti rešitvi"
 
-#: courses/models.py:44 courses/models.py:49
+#: courses/models.py:59 courses/models.py:64
 msgid "Visible"
 msgstr "Vidne"
 
-#: courses/models.py:47
+#: courses/models.py:62
 msgid "Title"
 msgstr "Naslov"
 
-#: courses/models.py:48
+#: courses/models.py:63
 msgid "Description"
 msgstr "Opis"
 
-#: courses/models.py:51
+#: courses/models.py:66
 msgid "Solution visibility"
 msgstr "Rešitve"
 
@@ -54,19 +54,36 @@ msgid "(logout)"
 msgstr "(odjava)"
 
 #. Translators: Univerza v Ljubljani
-#: templates/base.html:93
+#: templates/base.html:93 templates/base.html.py:94
 msgid "University of Ljubljana"
 msgstr "Univerza v Ljubljani"
 
 #. Translators: Evropski sklad za regionalni razvoj
-#: templates/base.html:98
+#: templates/base.html:98 templates/base.html.py:99
 msgid "European Regional Development Fund"
 msgstr "Evropski sklad za regionalni razvoj"
 
 #. Translators: Ministrstvo za izobraževanje, znanost in šport
-#: templates/base.html:103
+#: templates/base.html:103 templates/base.html.py:104
 msgid "Ministry of Education, Science and Sport"
 msgstr "Ministrstvo za izobraževanje, znanost in šport"
+
+#. Translators: Text in footer.
+#: templates/base.html:109
+msgid ""
+"This work was funded in part by the European Union, European Regional "
+"Development Fund and the Ministry of Education, \n"
+"        Science and Sport. The operation is implemented in the framework of "
+"the Operational Program for Strengthening Regional Development \n"
+"        Potentials for the Period 2007&mdash;2013, Development priority: "
+"Economic development infrastructure, Priority theme: Information society.\n"
+"        "
+msgstr ""
+"Operacijo delno financira Evropska unija iz Evropskega sklada za regionalni "
+"razvoj ter Ministrstvo za izobraževanje, znanost in šport. Operacija se "
+"izvaja v okviru Operativnega programa krepitve regionalnih razvojnih "
+"potencialov v obdobju 2007&mdash;2013, razvojne prioritete: gospodarska "
+"razvojna infrastruktura; prednostne usmeritve: informacijska družba"
 
 #. Translators: Button for editing problem set.
 #. Translators: edit problem form button.
@@ -80,7 +97,7 @@ msgstr "Uredi"
 #. Translators: Button for deleting problem set.
 #. Translators: Delete problem text button.
 #: templates/courses/_problem_set.html:39
-#: templates/courses/problem_set_detail.html:130
+#: templates/courses/problem_set_detail.html:147
 msgid "Delete"
 msgstr "Zbriši"
 
@@ -109,12 +126,50 @@ msgstr "Uradne rešitve so pogojno vidne"
 msgid "Official solutions are visible"
 msgstr "Uradne rešitve so vidne"
 
+#. Translators: Link to list of course users.
+#: templates/courses/course_detail.html:24
+msgid "Browse list of users"
+msgstr "Seznam vpisanih"
+
 #. Translators: Button for creating new problem set.
 #. Translators: Title of 'add new problem set' form.
-#: templates/courses/course_detail.html:24
+#: templates/courses/course_detail.html:38
 #: templates/courses/problemset_form.html:19
 msgid "Add new problem set"
 msgstr "Dodaj sklop"
+
+#. Translators: Progress of a student in a course - heading in navigatio n
+#. Translators: Progress of students in a problem set - heading in navigation
+#: templates/courses/course_progress.html:12
+#: templates/courses/problem_set_progress.html:12
+msgid "progress"
+msgstr "napredek"
+
+#. Translators: current page in navigation
+#: templates/courses/course_progress.html:15
+#: templates/courses/problem_set_progress.html:15
+msgid "(current)"
+msgstr "(trenutna)"
+
+#. Translators: List of all teachers in a course - heading
+#: templates/courses/course_users.html:16
+msgid "Teachers"
+msgstr "Učitelji"
+
+#. Translators: Demote teacher to student - button
+#: templates/courses/course_users.html:33
+msgid "Demote to student"
+msgstr "Status študenta"
+
+#. Translators: List of all students in a course - heading
+#: templates/courses/course_users.html:48
+msgid "Students"
+msgstr "Študenti"
+
+#. Translators: Promote student to teacher - button
+#: templates/courses/course_users.html:67
+msgid "Promote to teacher"
+msgstr "Status učitelja"
 
 #. Translators: Title of copy problem modal.
 #: templates/courses/problem_copy_form.html:6
@@ -129,7 +184,7 @@ msgstr "Prosimo, izberite sklop, v katerega bo prekopirana ta naloga."
 #. Translators: Confirm copying of a problem.
 #. Translators: Copy problem text button.
 #: templates/courses/problem_copy_form.html:21
-#: templates/courses/problem_set_detail.html:125
+#: templates/courses/problem_set_detail.html:142
 msgid "Copy"
 msgstr "Kopiraj"
 
@@ -139,58 +194,63 @@ msgstr "Kopiraj"
 msgid "Cancel"
 msgstr "Prekliči"
 
-#. Translators: Button for downloading all problem files within a problem set.
-#: templates/courses/problem_set_detail.html:28
-msgid "Download all problem files"
-msgstr "Prenesi vse datoteke z nalogami"
-
 #. Translators: Button for creating new problem.
 #. Translators: Title of 'add new problem' form.
-#: templates/courses/problem_set_detail.html:34
+#: templates/courses/problem_set_detail.html:38
 #: templates/problems/problem_form.html:22
 msgid "Add new problem"
 msgstr "Dodaj nalogo"
 
+#. Translators: Button for showing the overall progress of students for the problem set.
+#: templates/courses/problem_set_detail.html:44
+msgid "Show progress"
+msgstr "Prikaži napredek"
+
+#. Translators: Button for downloading all problem files within a problem set.
+#: templates/courses/problem_set_detail.html:51
+msgid "Download all problem files"
+msgstr "Prenesi vse datoteke z nalogami"
+
 #. Translators: Button for adding new tags
-#: templates/courses/problem_set_detail.html:66
+#: templates/courses/problem_set_detail.html:83
 msgid "Add tag"
 msgstr "Dodaj značko"
 
 #. Translators: Prenesi datoteko
-#: templates/courses/problem_set_detail.html:81
+#: templates/courses/problem_set_detail.html:98
 msgid "Download file"
 msgstr "Prenesi datoteko"
 
 #. Translators: Datoteka za reševanje
-#: templates/courses/problem_set_detail.html:87
+#: templates/courses/problem_set_detail.html:104
 msgid "File for solving"
 msgstr "Datoteka za reševanje"
 
 #. Translators: Datoteka za urejanje
-#: templates/courses/problem_set_detail.html:91
+#: templates/courses/problem_set_detail.html:108
 msgid "File for editing"
 msgstr "Datoteka za urejanje"
 
 #. Translators: Button for downloading a single problem file.
-#: templates/courses/problem_set_detail.html:99
+#: templates/courses/problem_set_detail.html:116
 msgid "Download this problem file"
 msgstr "Datoteka z nalogo"
 
 #. Translators: Link to page with solutions.
 #. Translators: Title of solutions page.
-#: templates/courses/problem_set_detail.html:106
+#: templates/courses/problem_set_detail.html:123
 #: templates/problems/solutions.html:4
 msgid "Solutions"
 msgstr "Rešitve"
 
 #. Translators: Update problem text button.
-#: templates/courses/problem_set_detail.html:120
+#: templates/courses/problem_set_detail.html:137
 msgid "Update"
 msgstr "Posodobi"
 
 #. Translators: problem set detail
 #. Translators: in solution comparison table
-#: templates/courses/problem_set_detail.html:153
+#: templates/courses/problem_set_detail.html:170
 #: templates/problems/solutions.html:28
 msgid "part"
 msgstr "podnaloga"
@@ -226,15 +286,26 @@ msgstr "Uredi sklop"
 msgid "Add"
 msgstr "Dodaj"
 
+#: templates/homepage.html:23
+msgid "Unenroll"
+msgstr "Izpiši se"
+
 #. Translators: Link to a page with all problem lists within a course.
-#: templates/homepage.html:21
+#: templates/homepage.html:37
 msgid "All problem lists"
 msgstr "Vsi sklopi"
 
-#. Translators: Displays if the user is not enrolled in a single course yet.
-#: templates/homepage.html:28
-msgid "Oh dear, you are not enrolled in any course yet."
-msgstr "Ojej, v noben predmet še niste vpisani."
+#: templates/homepage.html:44
+msgid ""
+"Bellow is a list of courses you are not enrolled in yet. Enroll by clicking "
+"on 'Enroll' button."
+msgstr ""
+"Spodaj je seznam predmetov, v katere še nisi vpisan. Vpiši se s klikom na "
+"gumb 'Vpiši se'."
+
+#: templates/homepage.html:58
+msgid "Enroll"
+msgstr "Vpiši se"
 
 #. Translators: Title of login page.
 #: templates/login.html:6
@@ -329,3 +400,6 @@ msgstr "Vidnost rešitev je nastavljena na 'Skrito'"
 #: templates/problems/solutions.html:68
 msgid "Your solution for this part is not yet accepted."
 msgstr "Tega dela naloge še niste pravilno rešili."
+
+#~ msgid "Oh dear, you are not enrolled in any course yet."
+#~ msgstr "Ojej, v noben predmet še niste vpisani."
