Signify that EU funding has ended

--- a/web/locale/sl/LC_MESSAGES/django.po
+++ b/web/locale/sl/LC_MESSAGES/django.po
@@ -467,7 +467,7 @@ msgid ""
 "    "
 msgstr ""
 "\n"
-"Operacijo delno financira Evropska unija iz Evropskega sklada za regionalni "
+"Operacijo je delno financirala Evropska unija iz Evropskega sklada za regionalni "
 "razvoj ter Ministrstvo za izobraževanje, znanost in šport. Operacija se "
 "izvaja v okviru Operativnega programa krepitve regionalnih razvojnih "
 "potencialov v obdobju 2007&mdash;2013, razvojne prioritete: gospodarska "
